feat: store and display journey title
