# apps/payments-api/routes/schemas/index.ts
@@ -191,6 +191,7 @@ export const FullTransaction = Type.Object({
     email: Type.String(),
     submissionId: Type.Optional(Type.String()),
     journeyId: Type.Optional(Type.String()),
+    journeyTitle: Type.Optional(Type.String()),
   }),
 });
 
